# FaceTracing

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/bpj/com/facetracing/: CameraHelper.java  MainActivity.java  Utils.java
gradle/wrapper/: gradle-wrapper.properties
